feat: installment purchases (SDD-025)
